--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">Diapositiva 1
-            <img src="0 galeria/01.jpg" width="100$" height="100%">
+            <img src="/01.jpg" width="100$" height="100%">
                <div class="card-description">
                   <div class="card-title">
                      <h4>Description</h4>
@@ -34,7 +34,7 @@
         </div>
 
         <div class="swiper-slide">Diapositiva 2
-          <img src="0 galeria/02.jpeg" alt="...">
+          <img src="/0 galeria/02.jpeg" alt="...">
             <div class="card-description">
                <div class="card-title">
                 <h4>Description</h4>
