--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
     />
     <link 
-       rel="stylesheet" href="/estilos1.css" />       
+       rel="stylesheet" href="estilos1.css" />       
     
   </head>
  
